[Misc] Improve tests